[gd_scene load_steps=5 format=2]

[ext_resource path="res://models/level1/agent.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.8

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5
mid_height = 0.8

[sub_resource type="CubeMesh" id=3]

[node name="Agent" type="KinematicBody"]
script = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.911776, 0.410687, 0, -0.410687, -0.911776, 0, 0, 0 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.918581, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.901641, 0 )
mesh = SubResource( 2 )

[node name="GroundRayCast" type="RayCast" parent="."]
enabled = true

[node name="Nose" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 1.28547, -0.551289 )
mesh = SubResource( 3 )

[node name="LookRayCast" type="RayCast" parent="Nose"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0.0554657, 5.51289 )
enabled = true
cast_to = Vector3( 0, 0, -3 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.06268, 0 )
billboard = 1
modulate = Color( 0.00392157, 0.278431, 0.0352941, 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
